# smartdoc-rag

./: .gitignore  docker-compose.yml  entrypoint-flower.sh  entrypoint.sh
.envs/.local/: .postgres
.github/workflows/: smartdoc.yml
smartdoc/: Dockerfile  alembic.ini  celery.sh  init.sh  pyproject.toml
smartdoc/app/: celery.py  main.py  router.py  settings.py
smartdoc/app/db/: database.py
smartdoc/app/endpoints/: document.py  s3.py  user.py
smartdoc/app/exceptions/: base.py
smartdoc/app/llm/: ollama_client.py  pgvector_client.py
smartdoc/app/llm/utils/: pre_process_text.py
smartdoc/app/migrations/: env.py  script.py.mako
smartdoc/app/migrations/versions/: 2025_03_01_0101-88d3012fde89_initial_migrations.py  2025_03_10_2337-f1882bc23a1d_added_document_table.py  2025_03_15_0114-8aca4ec823d6_added_document_embedding.py  2025_03_23_1113-ac1172460f92_user_document_table.py
smartdoc/app/model/: document.py  user.py
smartdoc/app/schema/: document.py  response.py  s3.py  user.py
smartdoc/app/services/: s3_client.py
smartdoc/app/tasks/: task.py
smartdoc/app/utils/: file_utils.py  s3_user_map.py  switch_db_url.py
